[package]
name = "gencam_gui"
version = "0.0.1"
authors = ["Mitchell Bailey <mitchell_bailey@student.uml.edu>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.80"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui_extras = {version = "0.28.1", features = ["all_loaders"] }
image = { version = "0.25.2", features = ["jpeg", "png"] }
egui_plot = "0.28.1"
egui_dock = "0.13.0"
generic-camera = { version = "0.0.4" }
refimage = { version = "0.5", features = ["rayon", "serde_flate", "image"]  } # fitsio can not be enabled for wasm
serde_json = "1.0.128"
circular-buffer = "0.1.9"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.93"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
# HACK: pin web-sys to <0.3.70 until a new `eframe` is released containing
# the following PR: https://github.com/emilk/egui/pull/4980
version = ">= 0.3.4, < 0.3.70"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]


# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
